Fix overlapping between sticky (fixed) header (with menu) and next div

--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,7 @@ li.current a {
 /* Photo */
 
 #photo {
+    padding: 73px 0 0 0;
     background: linear-gradient(#a31d1d, #e66665);
 }
 
